--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="homeleft">
             <div class="media">
                 <div class="cover object">
-                    <img class="contain" src="/meme-hot-1.jpg" alt="Paris" style="width: 150px; height: 150px">
+                    <img class="contain" src="meme-hot-1.jpg" alt="Paris" style="width: 150px; height: 150px">
                 </div>
               </div>
             <div class="name">
